feat: make it able to switch game mode